# py-modern

./: .pre-commit-config.yaml  README.md  copier.yml  pyproject.toml
includes/: python-versions.jinja
licenses/: BSD_License.txt  ISC_License.txt  MIT_License.txt
project/: .gitignore  .pre-commit-config.yaml.jinja  .python-version.jinja  LICENSE.jinja  README.md.jinja  mkdocs.yml.jinja  pyproject.toml.jinja  {% if justfile %}justfile{% endif %}.jinja
project/.github/: {% if  github_issues_template %}PULL_REQUEST_TEMPLATE.md{% endif %}.jinja
project/.github/{% if  github_issues_template %}ISSUE_TEMPLATE{% endif %}/: bug_report.yml.jinja  config.yml  feature_request.yml.jinja
project/.github/{% if github_actions %}actions{% endif %}/config-git-bot/: action.yml
project/.github/{% if github_actions %}actions{% endif %}/setup-python-env/: action.yml
project/.github/{% if github_actions %}workflows{% endif %}/: check-and-test.yml.jinja
project/tests/: test_import.py.jinja
project/{% if mkdocs %}docs{% endif %}/: getting_started.md.jinja  index.md.jinja
project/{% if mkdocs %}docs{% endif %}/{% if mkdocstring %}ci{% endif %}/: gen_api_reference.py.jinja
pymodern/: __main__.py
